--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
     package="com.finapps">
     
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
     <!-- This package contains an application...  The 'label' is the name
          to display to the user for the overall application, and provides
@@ -57,6 +57,8 @@
 
         </activity>
 
+        <activity android:name="com.finapps.GlassJarActivity">
+        </activity>
     </application>
 
 </manifest>
