--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,7 +58,22 @@
         </activity>
 
         <activity android:name="com.finapps.GlassJarActivity">
+            <intent-filter>
+                <action android:name="com.finapps.OPEN_JAR" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
+        
+        <!-- Widget. Broadcast Receiver that will process AppWidget updates -->
+        <receiver android:name="com.finapps.PiggieWidget" android:label="Piggie Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/piggie_widget" />
+        </receiver>
+        
+        <!-- Service to perform web API queries -->
+		<service android:name="com.finapps.PiggieWidget$UpdateService" />
     </application>
 
 </manifest>
